# advanced-reporting

./: .env.example  .gitattributes  .gitignore  ADVISOR_PROMPT.md  AGENT_SYSTEM_BRIEF.md  Advanced Reporting Study Guide.docx  CAMPAIGN_PLANNER_BRIEF.md  CLAUDE.md  DASHBOARD_REDESIGN_BRIEF.md  FBI_CAMPAIGN_DATA_BRIEF.md  LICENSE  README.md  SETUP_CLAUDE_CODE.md  UI_REVIEW_PROMPT.md  advanced-reporting.bundle  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: campaign_goals.yaml  config.example.yaml  config.fbi-example.yaml  mappings.yaml  metrics.yaml  naming_overrides.yaml  planner_rails.yaml
config/scenarios/: fbi_recruitment.yaml
docs/: WORK_MACHINE_SETUP.md  design-intake-agent.md  notes-intake-agent.md  plan-robust-ingestion.md
naming/: README.md  __init__.py  mock_placements.xlsx  my_output.xlsx  my_test.xlsx  naming_generator.py  naming_output.xlsx  naming_template.xlsx
scripts/: advise.py  build_report.py  compare_engines.py  export_clean.py  generate_fbi_campaign.py  generate_recruitment_exports.py  generate_sample_data.py  generate_sample_exports.py  ingest.py  naming_report.py  plan_campaign.py  run_pipeline.py
src/advanced_reporting/: __init__.py  llm.py  utils.py
src/advanced_reporting/agent/: __init__.py  commentary_agent.py  guards.py  intake.py  knowledge.py  recommendations.py  spec_agent.py  summaries.py  validate.py
src/advanced_reporting/dashboard/: __init__.py  app.py  drilldown.py  filters.py  insights.py  mmm_view.py  theme.py
src/advanced_reporting/ingestion/: __init__.py  base.py  connectors.py  csv_source.py  exports.py  factory.py  naming_decode.py  scenario.py  scenario_dgp.py  schema.py  store.py  supermetrics.py  synthetic.py
src/advanced_reporting/mmm/: __init__.py  base.py  baseline.py  (+4 more)
system/: README.md
system/context/: README.md  client_brief.template.md
system/guidelines/: campaign_types.md  commentary_examples.md  commentary_style.md  conversion_types.md  metrics_playbook.md  recommendation_menu.md
system/prompts/: commentary_agent.md  spec_agent.md
tests/: test_agent.py  test_agent_evals.py  test_commentary.py  test_dashboard_wiring.py  test_drilldown.py  test_exports.py  test_fbi_ingest.py  test_filters.py  test_framing_guard.py  test_html_report.py  test_insights.py  test_intake.py  test_intake_resolve.py  test_lens.py  test_llm.py  test_meridian.py  test_metrics.py  test_mmm_view.py  test_naming_decode.py  test_pipeline.py  test_planner.py  test_scenario_dgp.py  test_scenario_schema.py  test_store_hardening.py  test_theme.py  test_validation.py
(+25 files in other folders)
