[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-reporting"
version = "0.2.0"
description = "End-to-end MMM + marketing campaign reporting toolkit"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pyarrow>=14",        # parquet engine for the durable raw store
    "openpyxl>=3.1",      # xlsx I/O for the naming generator + planner bridge
    "streamlit>=1.30",
    "plotly>=5.18",       # dashboard charts (house style via dashboard/theme.py)
]
# Target MMM engine (heavy: TensorFlow Probability) — install separately when ready:
#   uv pip install google-meridian

[project.optional-dependencies]
# the guarded LLM paths only — deterministic paths never import it
llm = ["anthropic>=0.40"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.setuptools]
# advanced_reporting lives under src/; the naming generator is a root-level package
# (mapped explicitly so `pip install -e .` / `uv sync` carries it — the default
# src-finder would silently drop it and break the planner -> generator bridge).
packages = [
    "advanced_reporting",
    "advanced_reporting.ingestion",
    "advanced_reporting.transform",
    "advanced_reporting.mmm",
    "advanced_reporting.reporting",
    "advanced_reporting.dashboard",
    "advanced_reporting.planner",
    "naming",
]

[tool.setuptools.package-dir]
"" = "src"
"naming" = "naming"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# defaults (E4/E7/E9/F) minus deliberate house idioms:
# E701/E702 — compact `a; b` one-liners are used intentionally throughout
ignore = ["E701", "E702"]

[tool.ruff.lint.per-file-ignores]
# scripts + dashboard insert sys.path before imports (documented pattern until
# console entry points land); tests import after fixtures
"scripts/*" = ["E402"]
"src/advanced_reporting/dashboard/app.py" = ["E402"]
"tests/*" = ["E402"]
